src/objects/cb5__CBInvoice__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBAccountSign__c</fullName>
        <formula>TEXT(cb5__CBAccount__r.cb5__CBAccountType__r.cb5__Sign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBAccountSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>cb5__CBAccount__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <formula>cb5__CBPeriod__r.cb5__CBBudgetYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBKey__c</fullName>
        <label>CBKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>cb5__CBPeriod__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>cb5__CBVariable1__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>cb5__CBVariable2__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>cb5__CBVariable3__c</referenceTo>
        <relationshipLabel>CB Invoices</relationshipLabel>
        <relationshipName>CB_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__ExtId__c</fullName>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>I-{00000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cb5__Total__c</fullName>
        <label>Total</label>
        <summarizedField>cb5__CBInvoiceLine__c.cb5__Amount__c</summarizedField>
        <summaryForeignKey>cb5__CBInvoiceLine__c.cb5__CBInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>CB Invoice</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBDivision__c</columns>
        <columns>cb5__CBPeriod__c</columns>
        <columns>cb5__CBVariable1__c</columns>
        <columns>cb5__InvoiceDate__c</columns>
        <columns>cb5__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>